--- a/src/index.css
+++ b/src/index.css
@@ -102,8 +102,8 @@ body {
   background-color: rgb(0, 0, 0);
   /* padding: 12px 22px; */
   /* border-radius: 6px; */
-  width: 100%;
-  height: 100%;
+  width: fit-content;
+  height: fit-content;
   transition: 300ms;
   text-align: center;
 }
